# study

./: .gitignore  xmind
docs/: Tokio.xmind
frp/: readme.md  test.sh
frp/carboxyl/sec4/: CMakeLists.txt  Cargo.toml
frp/future-stream/hold_snapshot/: Cargo.toml
frp/future-stream/merge/: Cargo.toml
frp/future-stream/stream_sample/: Cargo.toml
frp/sec2/airline1/: Cargo.toml
frp/sec2_reverse/: Cargo.toml
frp/sec4/: Cargo.toml
pronounce/: pronounce.xmind
rizap/: session07.xmind  session13.xmind  session14.xmind  session15.xmind  session17.xmind  session18.xmind  session19.xmind  session20.xmind  session7.xmind
rust/c-rust-ffi-bridge/: Cargo.toml  README.md  main.c
rust/csv/: Cargo.toml  item.csv
rust/database/: .cfignore  .env  .gitignore  Cargo.toml  manifest.yml
rust/database/migrations/2017-11-07-043711_create_posts/: up.sql
rust/database/migrations/2017-11-08-081452_create_items/: down.sql  up.sql
rust/database/migrations/2017-11-09-072234_create_nkhrs/: up.sql
rust/database/src/: database_connection.rs  http.rs  main.rs  models.rs
rust/database/src/models/: items.rs  items_query.rs  mod.rs  posts.rs  posts_query.rs
rust/futures-fs-test/: Cargo.toml
rust/multithread_message_sender/: Cargo.toml  main.c  make.sh
rust/ninetynine-rust/: Cargo.toml
rust/recorder/: Cargo.toml
rust/rust-closure-udpsender/: Cargo.toml  test.rb
rust/rust-udpmodule/: Cargo.toml  main  main.c  recv.rb
rust/rust_chaining_method/: Cargo.toml
rust/rust_mutex_sample/: Cargo.toml
rust/thread-closing-test/: Cargo.toml
rust/tokio_io_lines/: Cargo.toml
(+58 files in other folders)
