[package]
name = "mono"
version = "0.1.0"
authors = ["Toshiya Nakakura <nakakura@me.com>"]

[[bin]]
name = "mono"

[dependencies]
iron = "*"
env_logger = "*"
diesel = { version = "*", features = ["mysql"] }
diesel_codegen = { version = "*", features = ["mysql"] }
dotenv = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
regex = "*"
lazy_static = "*"
