[package]
name = "mono"
version = "0.1.0"
authors = ["Toshiya Nakakura <nakakura@me.com>"]

[[bin]]
name = "mono"

[dependencies]
iron = "0.6"
env_logger = "0.4.3"
diesel = { version = "0.16", features = ["mysql"] }
diesel_codegen = { version = "0.16", features = ["mysql"] }
dotenv = "0.10.1"
serde = "1.0.19"
serde_json = "1.0.5"
serde_derive = "1.0.19"
regex = "0.2.2"
lazy_static = "0.2.9"
